--- a/index.html
+++ b/index.html
@@ -1,1 +1,181 @@
-<a href="test.html">Testing</a>
+<!DOCTYPE html">
+<!--<html xmlns="http://www.w3.org/1999/xhtml">-->
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Jeffrey Wong</title>
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <link rel="icon" href="images/favicon-32x32.png">
+
+    <link href="tooplate_style.css" rel="stylesheet" type="text/css" />
+
+    <script language="javascript" type="text/javascript">
+        function clearText(field) {
+
+            if (field.defaultValue == field.value) field.value = '';
+            else if (field.value == '') field.value = field.defaultValue;
+
+        }
+    </script>
+
+</head>
+
+<body>
+    <div id="tooplate_body_wrapper">
+        <div id="tooplate_wrapper">
+
+            <div id="tooplate_buffer"></div>
+
+            <div id="tooplate_header">
+                <div id="site_title">
+                    <h1><a href="#">Jeffrey Wong</a></h1>
+                </div>
+
+                <div id="header_right">
+                    <div id="tooplate_menu">
+                        <ul>
+                            <li><a href="index.html" class="current">Home</a></li>
+                            <li><a href="about.html">Projects</a></li>
+                            <li><a href="gallery.html">About Me</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </div> <!-- end of tooplate_menu -->
+                </div>
+                <div class="cleaner"></div>
+            </div> <!-- end of tooplate_header -->
+
+            <div id="tooplate_main">
+                <div class="cleaner h20"></div>
+
+                <div class="tooplate_sidebar float_l">
+
+                    <div class="content_box">
+                        <h3>My Current Projects</h3>
+                        <ul class="tmo_list">
+                            <li><a href="https://github.com/shinytinyninja/mailSafe">Mail-Safe</a></li>
+                            <li><a href="https://github.com/shinytinyninja/MackenzieBot">Mackenzie Bot</a></li>
+                        </ul>
+                    </div>
+                    <div class="content_box">
+                        <h3>Technical Toolbox</h3>
+                        <p>
+                            Python <br />
+                            Java <br />
+                            JavaScript <br />
+                            C/C++ <br />
+                            Android <br />
+                            Flutter <br />
+                        </p>
+
+                    </div>
+                    <div class="content_box lb">
+                        <h3>Availble to work in</h3>
+                        Toronto, Ontario<br />
+                        London, Ontario<br />
+                        Vancouver, British Columbia<br />
+                        Montreal, Quebec<br />
+                    </div>
+                </div>
+
+                <div id="tooplate_content">
+
+                    <div class="content_box hr_divider">
+                        <h2>Welcome! &#9996;</h2>
+                        <p>
+                            My name is Jeffrey Wong, a robotics fanatic turned Computer Science student. Currently exploring the way use mobile applications in our everyday lives. Check out my current and past projects aswell as find out more about who I am!
+                        </p>
+
+                        <div class="cleaner"></div>
+                    </div>
+                    <div class="content_box hr_divider">
+                        <h3>Latest Project</h3>
+                        <div id="big_emoji">&#x2328;</div>
+
+                        <p>Currently working towards graduating in a few months from the University of Western Ontario.</p>
+                        <div class="cleaner"></div>
+                    </div>
+                    <div class="content_box lb">
+                        <h3>Current Goals</h3>
+                        <div id="med_emoji">&#127993;</div>
+                        <p>
+                            Currently searching for new grad positions related to Software Development/Engineering and Product Management. Intrested in the automotive and telecommunications field.
+                        </p>
+                        <div class="cleaner"></div>
+                    </div>
+                    <div class="cleaner"></div>
+                </div>
+
+                <div class="tooplate_sidebar float_r">
+                    <div class="content_box lb">
+                        <h3 class="gallery_title">Past Events</h3>
+                        <div class="box01"><span class="top"></span><span class="bottom"></span>
+                            <div class="box01_content">
+                                <div class="image_wrapper"><span></span><img alt="Image" src="images/wec_2022.jpeg" /></div>
+                                WEC, Janurary 2022
+                            </div>
+                            <div class="box01_content">
+                                <div class="image_wrapper"><span></span><img alt="Image" src="images/tooplate_image_02.jpg" /></div>
+                                OEC, Janurary 2020
+                            </div>
+                            <div class="box01_content lb">
+                                <div class="image_wrapper"><span></span><img alt="Image" src="images/tooplate_image_03.jpg" /></div>
+                                Hack Western, November 2021
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cleaner h20"></div>
+
+
+
+                <div class="cleaner"></div>
+
+            </div>
+
+            <div id="tooplate_main_bottom"></div>
+
+            <div id="tooplate_bottom">
+                <div class="col_w280">
+                    <h4>Contact Me</h4>
+                    <strong>
+                        <a href="">Email: </a>
+                        <br />
+                        <a href="*">LinkedIn: </a>
+                        <a href="*">Github</a>
+                        <br> <a href="*">Instagram</a>
+
+                    </strong>
+
+                </div>
+                <div class="col_w280">
+                    <h4>Recent Work</h4>
+                    <img class="imger_box" src="images/tooplate_image_10.jpg" alt="Image 10" />
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                <div class="col_w280 rmb">
+                    <h4>Company Address</h4>
+                    <strong>Corporate Co. Ltd.</strong><br />
+                    110-220 Consectetur adipisicing, <br />
+                    Tempor incididunt 10550<br />
+                    Tel: 010-020-0330<br /><br />
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elise tempor incididunt ut labore et dolore magna aliqua. Utnis ad minim veniaquis.</p>
+                </div>
+                <div class="cleaner"></div>
+            </div>
+
+        </div> <!-- end of tooplate_wrapper -->
+
+        <div id="tooplate_footer_wrapper">
+            <div id="tooplate_footer">
+
+                2022 <a href="#">Jeffrey Wong </a>
+
+            </div> <!-- end of tooplate_footer -->
+        </div> <!-- end of tooplate_footer_wrapper -->
+    </div> <!-- end of tooplate_body_wrapper -->
+
+</body>
+
+</html>
