--- a/index.html
+++ b/index.html
@@ -140,27 +140,30 @@
                 <div class="col_w280">
                     <h4>Contact Me</h4>
                     <strong>
-                        <a href="">Email: </a>
+                        <div>Email: JWONG886@uwo.ca</div>
                         <br />
-                        <a href="*">LinkedIn: </a>
-                        <a href="*">Github</a>
-                        <br> <a href="*">Instagram</a>
-
+                        <br />
+                        <a href="https://www.linkedin.com/in/jeffrey-wong-8a841a168/">LinkedIn</a>
+                        <br />
+                        <br />
+                        <a href="https://www.github.com/shinytinyninja">Github</a>
+                        <br />
+                        <br />
+                        <a href="https://www.instagram.com/jefxy">Instagram</a>
                     </strong>
 
                 </div>
                 <div class="col_w280">
-                    <h4>Recent Work</h4>
+                    <h4>My Projects</h4>
                     <img class="imger_box" src="images/tooplate_image_10.jpg" alt="Image 10" />
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 <div class="col_w280 rmb">
-                    <h4>Company Address</h4>
-                    <strong>Corporate Co. Ltd.</strong><br />
-                    110-220 Consectetur adipisicing, <br />
-                    Tempor incididunt 10550<br />
-                    Tel: 010-020-0330<br /><br />
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elise tempor incididunt ut labore et dolore magna aliqua. Utnis ad minim veniaquis.</p>
+                    <h4>About this website</h4>
+                    <strong>Thanks for checking it out</strong><br />
+                    <p>
+                        This website is built upon a simple HTML/CSS setup. I wanted to mimic the simplistic, simple UI of websites of a retro web page. 
+                    </p>    
                 </div>
                 <div class="cleaner"></div>
             </div>
