--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html">
+<!DOCTYPE "html">
 <!--<html xmlns="http://www.w3.org/1999/xhtml">-->
 
 <head>
@@ -10,15 +10,6 @@
 
     <link href="tooplate_style.css" rel="stylesheet" type="text/css" />
 
-    <script language="javascript" type="text/javascript">
-        function clearText(field) {
-
-            if (field.defaultValue == field.value) field.value = '';
-            else if (field.value == '') field.value = field.defaultValue;
-
-        }
-    </script>
-
 </head>
 
 <body>
@@ -29,15 +20,15 @@
 
             <div id="tooplate_header">
                 <div id="site_title">
-                    <h1><a href="#">Jeffrey Wong</a></h1>
+                    <h1><a href="index.html">Jeffrey Wong</a></h1>
                 </div>
 
                 <div id="header_right">
                     <div id="tooplate_menu">
                         <ul>
                             <li><a href="index.html" class="current">Home</a></li>
-                            <li><a href="about.html">Projects</a></li>
-                            <li><a href="gallery.html">About Me</a></li>
+                            <li><a href="about.html">About Me</a></li>
+                            <li><a href="projects.html">Projects</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div> <!-- end of tooplate_menu -->
@@ -154,9 +145,6 @@
 
                 </div>
                 <div class="col_w280">
-                    <h4>My Projects</h4>
-                    <img class="imger_box" src="images/tooplate_image_10.jpg" alt="Image 10" />
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 <div class="col_w280 rmb">
                     <h4>About this website</h4>
