--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                             <li><a href="index.html" class="current">Home</a></li>
                             <li><a href="about.html">About Me</a></li>
                             <li><a href="projects.html">Projects</a></li>
-                            <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div> <!-- end of tooplate_menu -->
                 </div>
@@ -60,6 +59,17 @@
                         </p>
 
                     </div>
+                     <div class="content_box">
+                        <h3>Intrests</h3>
+                        <p>
+                            Remote Controlled Cars/Drones <br />
+                            Ham Radio <br />
+                            Automation <br />
+                            Overlanding <br />
+                            Camping <br />
+                        </p>
+
+                    </div>
                     <div class="content_box lb">
                         <h3>Availble to work in</h3>
                         Toronto, Ontario<br />
@@ -83,14 +93,14 @@
                         <h3>Latest Project</h3>
                         <div id="big_emoji">&#x2328;</div>
 
-                        <p>Currently working towards graduating in a few months from the University of Western Ontario.</p>
+                        <p>Currently working towards graduating in a few months from the University of Western Ontario. Moreoever, I just finished a weekend at the Ontario Engineering Competition designing a python based travelling salesman solution.</p>
                         <div class="cleaner"></div>
                     </div>
                     <div class="content_box lb">
                         <h3>Current Goals</h3>
                         <div id="med_emoji">&#127993;</div>
                         <p>
-                            Currently searching for new grad positions related to Software Development/Engineering and Product Management. Intrested in the automotive and telecommunications field.
+                            Currently searching for new grad positions related to Software Development/Engineering and Product Management. Interested in the automotive and telecommunications field. Working on Google Flutter and Android/Kotlin Udacity programs. 
                         </p>
                         <div class="cleaner"></div>
                     </div>
@@ -106,11 +116,11 @@
                                 WEC, Janurary 2022
                             </div>
                             <div class="box01_content">
-                                <div class="image_wrapper"><span></span><img alt="Image" src="images/tooplate_image_02.jpg" /></div>
+                                <div class="image_wrapper"><span></span><img alt="Image" src="images/map.jpg" /></div>
                                 OEC, Janurary 2020
                             </div>
                             <div class="box01_content lb">
-                                <div class="image_wrapper"><span></span><img alt="Image" src="images/tooplate_image_03.jpg" /></div>
+                                <div class="image_wrapper"><span></span><img alt="Image" src="images/wec.jpg" style:{overflow: hidden}/></div>
                                 Hack Western, November 2021
                             </div>
                         </div>
