--- a/about.html
+++ b/about.html
@@ -33,9 +33,8 @@ http://www.tooplate.com/view/2074-corporate
                     <div id="tooplate_menu">
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html" class="current">Projects</a></li>
-                            <li><a href="gallery.html">About Me</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="about.html" class="current">About Me</a></li>
+                            <li><a href="gallery.html">Projects</a></li>
                         </ul>
                     </div> <!-- end of tooplate_menu -->
                 </div>
@@ -67,7 +66,7 @@ http://www.tooplate.com/view/2074-corporate
                 </div>
 
                 <div class="col_large float_r">
-                    <h2>Our Right Team</h2>
+                    <h2>Who I am</h2>
                     <img class="image_left" src="images/tooplate_image_11.jpg" alt="Image 11" />
                     <p align="justify">Pellentesque quis lectus sed tellus pellentesque egestas et non neque. Nullam luctus, eros sed pellentesque dictum, sem ex aliquet libero, nec viverra est ligula ornare eros. Quisque in nibh in dui ultricies ultricies. Integer dapibus dictum ipsum in efficitur.</p>
                     <p align="justify">Pellentesque quis lectus sed tellus pellentesque egestas et non neque. Nullam luctus, eros sed pellentesque dictum, sem ex aliquet libero, nec viverra est ligula ornare eros. Quisque in nibh in dui. Phasellus laoreet mattis ipsum, et consequat massa sagittis vitae. Nunc faucibus, quam eu tristique sodales, ipsum ipsum fermentum tellus, non consectetur tortor neque eu urna. Mauris eget nibh dui.</p>
@@ -85,8 +84,8 @@ http://www.tooplate.com/view/2074-corporate
                 <div class="cleaner"></div>
 
 
-                <div class="col_large float_l">
-                    <h2> Left Side Team</h2>
+                <div class="col_large_padding float_l">
+                    <h2> My Hobbies/Intrest</h2>
                     <img class="image_left" src="images/tooplate_image_11.jpg" alt="Image 11" />
                     <p align="justify">Pellentesque quis lectus sed tellus pellentesque egestas et non neque. Nullam luctus, eros sed pellentesque dictum, sem ex aliquet libero, nec viverra est ligula ornare eros. Quisque in nibh in dui ultricies ultricies. Integer dapibus dictum ipsum in efficitur.</p>
                     <p align="justify">Pellentesque quis lectus sed tellus pellentesque egestas et non neque. Nullam luctus, eros sed pellentesque dictum, sem ex aliquet libero, nec viverra est ligula ornare eros. Quisque in nibh in dui. Phasellus laoreet mattis ipsum, et consequat massa sagittis vitae. Nunc faucibus, quam eu tristique sodales, ipsum ipsum fermentum tellus, non consectetur tortor neque eu urna. Mauris eget nibh dui.</p>
@@ -128,7 +127,7 @@ http://www.tooplate.com/view/2074-corporate
                 <div class="cleaner"></div>
 
                 <div class="col_half">
-                    <h2>Management Crew</h2>
+                    <h2>Next 10 Year Plan</h2>
                     <p>Pellentesque risus nibh, sodales pulvinar dolor accumsan, tempus sollicitudin ipsum. Cras ullamcorper at enim ac accumsan. Aliquam convallis interdum dolor at sollicitudin. Mauris placerat nibh non neque iaculis, ut pretium lacus ultricies. Nullam porttitor ligula vitae.</p>
                     <p>Cras ut urna maximus, ullamcorper metus vitae, tincidunt turpis. Donec lobortis orci ante, eget posuere velit scelerisque at. In pellentesque sem luctus tincidunt varius.</p>
                     <div class="cleaner"></div>
