--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I'm a robotics fanatic turned software engineer; fueling my curiousity by exploring how we interact with technology everday and leverage it to empower us.</p>
+                    <p>I'm a robotics fanatic turned software engineer, fueling my curiosity by exploring how we interact with technology everyday and leverage it to empower us.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Today, I'm utilizing my skillsets and curiousity to create meaningful products and experiences. Feel free to reach out on my links or shoot me an email below, I'd love to get in touch!</p>
+                    <p>Today, I'm utilizing my skill sets and curiosity to create meaningful products and experiences. Feel free to reach out on my links or shoot me an email below, I'd love to get in touch!</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="mailto:jwong886@uwo.ca" class="btn btn-lg btn-outline">
